--- a/dillydally-express/package.json
+++ b/dillydally-express/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon",
-    "build": "tsc",
+    "copy-convex": "node scripts/copy-convex-generated.js",
+    "dev": "npm run copy-convex && nodemon",
+    "build": "npm run copy-convex && tsc",
     "check-types": "tsc --noEmit",
     "start": "node dist/index.js"
   },
