--- a/dillydally-frontend/package.json
+++ b/dillydally-frontend/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "generate-convex": "cd ../.. && npx convex codegen && cd dillydally-frontend",
     "copy-convex": "node scripts/copy-convex-generated.js",
     "dev": "npm run copy-convex && vite",
-    "build": "sh -c '[ -n \"$VERCEL\" ] && npm install --include=optional @rollup/rollup-linux-x64-gnu || true' && npm run copy-convex && tsc -b && vite build",
+    "build": "sh -c '[ -n \"$VERCEL\" ] && npm install --include=optional @rollup/rollup-linux-x64-gnu || true' && npm run generate-convex && npm run copy-convex && tsc -b && vite build",
     "check-types": "tsc --noEmit",
     "lint": "eslint .",
     "preview": "vite preview",
