--- a/dillydally-frontend/vercel.json
+++ b/dillydally-frontend/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "npm run copy-convex && npm run build",
+  "buildCommand": "cd ../.. && npx convex codegen && cd dillydally-frontend && npm run copy-convex && npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install",
+  "installCommand": "cd ../.. && npm install && cd dillydally-frontend && npm install",
   "framework": "vite"
 }
 
