--- a/dillydally-express/package.json
+++ b/dillydally-express/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
+    "check-types": "tsc --noEmit",
     "start": "node dist/index.js"
   },
   "dependencies": {
