--- a/dillydally-frontend/package.json
+++ b/dillydally-frontend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "check-types": "tsc --noEmit",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview"
   },
   "dependencies": {
     "convex": "^1.28.2",
