--- a/dillydally-express/package.json
+++ b/dillydally-express/package.json
@@ -9,10 +9,13 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "convex": "^1.17.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^2.0.2",
+    "openai": "^6.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
