--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dillydally-frontend/dist",
   "devCommand": "npm run dev --workspace=dillydally-frontend",
-  "installCommand": "npm install && npm install --workspaces --include-workspace-root",
+  "installCommand": "npm install",
   "framework": "vite",
   "rewrites": [
     {
