--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dillydally-frontend/dist",
   "devCommand": "npm run dev --workspace=dillydally-frontend",
-  "installCommand": "bash scripts/vercel-install.sh",
+  "installCommand": "./scripts/vercel-install.sh",
   "framework": "vite",
   "rewrites": [
     {
