--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "dev": "concurrently --names \"convex,frontend,backend\" --prefix-colors \"blue,green,yellow\" \"npx convex dev\" \"npm run dev --workspace=dillydally-frontend\" \"npm run dev --workspace=dillydally-express\"",
-    "build": "npm run codegen && turbo build",
+    "build": "npm run codegen && turbo build && echo '=== DEBUG: Current directory ===' && pwd && echo '=== DEBUG: Checking dillydally-frontend/dist ===' && ls -la dillydally-frontend/dist/ 2>&1 && echo '=== DEBUG: Verifying outputDirectory ===' && test -d dillydally-frontend/dist && echo '✓ dillydally-frontend/dist exists' || echo '✗ dillydally-frontend/dist NOT FOUND'",
     "codegen": "npx convex codegen",
     "start": "concurrently --names \"convex,frontend,backend\" --prefix-colors \"blue,green,yellow\" \"npx convex dev\" \"npm run preview --workspace=dillydally-frontend\" \"npm run start --workspace=dillydally-express\"",
     "install-all": "npm install && npm install --workspaces"
