--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dillydally-frontend/dist",
+  "rootDirectory": ".",
   "devCommand": "npm run dev --workspace=dillydally-frontend",
   "installCommand": "rm -rf node_modules */node_modules */*/package-lock.json && npm i --include=optional && npm i -w dillydally-frontend --include=optional @rollup/rollup-linux-x64-gnu",
   "framework": "vite",
