--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   ],
   "scripts": {
     "dev": "concurrently --names \"convex,frontend,backend\" --prefix-colors \"blue,green,yellow\" \"npx convex dev\" \"npm run dev --workspace=dillydally-frontend\" \"npm run dev --workspace=dillydally-express\"",
-    "build": "npm run codegen && turbo build && npm run verify-build",
-    "verify-build": "echo '=== DEBUG: Current directory ===' && pwd && echo '=== DEBUG: Finding all dist directories ===' && find . -type d -name 'dist' -not -path './node_modules/*' 2>&1 && echo '=== DEBUG: Finding index.html ===' && find . -name 'index.html' -not -path './node_modules/*' 2>&1 && echo '=== DEBUG: Checking root dist directory ===' && ls -la dist/ 2>&1 && echo '=== DEBUG: Full path ===' && (pwd && ls -la dist/ 2>&1) || echo 'Failed to find dist'",
+    "build": "npm run codegen && turbo build",
     "codegen": "npx convex codegen",
     "start": "concurrently --names \"convex,frontend,backend\" --prefix-colors \"blue,green,yellow\" \"npx convex dev\" \"npm run preview --workspace=dillydally-frontend\" \"npm run start --workspace=dillydally-express\"",
     "install-all": "npm install && npm install --workspaces"
