--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev": "concurrently --names \"convex,frontend,backend\" --prefix-colors \"blue,green,yellow\" \"npx convex dev\" \"npm run dev --workspace=dillydally-frontend\" \"npm run dev --workspace=dillydally-express\"",
     "build": "npm run codegen && turbo build && npm run postbuild",
-    "postbuild": "test -d dillydally-frontend/dist && echo '✓ Build output found at dillydally-frontend/dist' || (echo '✗ Build output not found' && exit 1)",
+    "postbuild": "if [ -d dillydally-frontend/dist ]; then rm -rf dist && cp -r dillydally-frontend/dist dist && echo '✓ Copied dist to root'; else echo '✗ Build output not found' && exit 1; fi",
     "codegen": "npx convex codegen",
     "start": "concurrently --names \"convex,frontend,backend\" --prefix-colors \"blue,green,yellow\" \"npx convex dev\" \"npm run preview --workspace=dillydally-frontend\" \"npm run start --workspace=dillydally-express\"",
     "install-all": "npm install && npm install --workspaces"
