--- a/dillydally-frontend/package.json
+++ b/dillydally-frontend/package.json
@@ -4,24 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "generate-convex": "cd ../.. && npx convex codegen && cd dillydally-frontend",
-    "copy-convex": "node scripts/copy-convex-generated.js",
-    "dev": "npm run copy-convex && vite",
-    "build": "sh -c '[ -n \"$VERCEL\" ] && npm install --include=optional @rollup/rollup-linux-x64-gnu || true' && npm run generate-convex && npm run copy-convex && tsc -b && vite build",
+    "dev": "vite",
+    "build": "sh -c '[ -n \"$VERCEL\" ] && npm install --include=optional @rollup/rollup-linux-x64-gnu || true' && tsc -b && vite build",
     "check-types": "tsc --noEmit",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite preview"
   },
   "dependencies": {
-    "@mediapipe/face_mesh": "^0.4.1633559619",
-    "@tensorflow-models/face-landmarks-detection": "^1.0.6",
-    "@tensorflow/tfjs": "^4.22.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "convex": "^1.28.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-webcam": "^7.2.0"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -36,8 +29,5 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-win32-x64-msvc": "^4.53.1"
   }
 }
