--- a/dillydally-express/tsconfig.json
+++ b/dillydally-express/tsconfig.json
@@ -18,6 +18,6 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "src/lib/convex-generated"]
+  "exclude": ["node_modules", "dist"]
 }
 
