--- a/dillydally-frontend/package.json
+++ b/dillydally-frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@rollup/rollup-linux-x64-gnu": "^4.53.1",
     "@tensorflow-models/face-landmarks-detection": "^1.0.6",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
