--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "turbo": "^2.6.0"
   },
   "dependencies": {
+    "@auth/core": "^0.37.0",
+    "@convex-dev/auth": "^0.0.90",
     "convex": "^1.17.2"
   }
 }
