--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -11,9 +11,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "types": ["node"]
   },
   "include": ["."],
   "exclude": ["_generated"]
 }
-
