--- a/dillydally-express/package.json
+++ b/dillydally-express/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^2.0.2",
-    "openai": "^6.8.1"
+    "openai": "^6.8.1",
+    "@auth/core": "^0.37.0",
+    "@convex-dev/auth": "^0.0.90"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
