--- a/dillydally-frontend/package.json
+++ b/dillydally-frontend/package.json
@@ -19,7 +19,9 @@
     "convex": "^1.28.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "@auth/core": "^0.37.0",
+    "@convex-dev/auth": "^0.0.90"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
