pass ci attempt 2

--- a/dillydally-frontend/tsconfig.app.json
+++ b/dillydally-frontend/tsconfig.app.json
@@ -30,6 +30,6 @@
       "@convex/*": ["../convex/*"]
     }
   },
-  "include": ["src", "../convex"],
-  "exclude": ["../convex/auth.config.ts"]
+  "include": ["src"],
+  "exclude": []
 }
