--- a/dillydally-frontend/tsconfig.app.json
+++ b/dillydally-frontend/tsconfig.app.json
@@ -27,7 +27,8 @@
     /* Paths */
     "baseUrl": ".",
     "paths": {
-      "@convex/*": ["../convex/*"]
+      "@convex/*": ["../convex/*"],
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src", "../convex"]
